tests/neg/mirror-synthesis-errors.check
-- Error: tests/neg/mirror-synthesis-errors.scala:21:18 ----------------------------------------------------------------
21 |val testA = summon[Mirror.Of[A]] // error: Not a sealed trait
   |                  ^
   |No given instance of type deriving.Mirror.Of[A] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[A]: 
   |	* trait A is not a generic product because it is not a case class
   |	* trait A is not a generic sum because it is not a sealed trait
-- Error: tests/neg/mirror-synthesis-errors.scala:22:18 ----------------------------------------------------------------
22 |val testC = summon[Mirror.Of[C]] // error: Does not have subclasses
   |                  ^
   |No given instance of type deriving.Mirror.Of[C] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[C]: 
   |	* trait C is not a generic product because it is not a case class
   |	* trait C is not a generic sum because it does not have subclasses
-- Error: tests/neg/mirror-synthesis-errors.scala:23:18 ----------------------------------------------------------------
23 |val testD = summon[Mirror.Of[D]] // error: child SubD takes more than one parameter list
   |                  ^
   |No given instance of type deriving.Mirror.Of[D] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[D]: 
   |	* class D is not a generic product because it is not a case class
   |	* class D is not a generic sum because its child class SubD is not a generic product because it takes more than one parameter list
-- Error: tests/neg/mirror-synthesis-errors.scala:24:21 ----------------------------------------------------------------
24 |val testSubD = summon[Mirror.Of[SubD]] // error: takes more than one parameter list
   |                     ^
   |No given instance of type deriving.Mirror.Of[SubD] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[SubD]: 
   |	* class SubD is not a generic product because it takes more than one parameter list
   |	* class SubD is not a generic sum because it is not a sealed class
-- Error: tests/neg/mirror-synthesis-errors.scala:25:18 ----------------------------------------------------------------
25 |val testE = summon[Mirror.Of[E]] // error: Not an abstract class
   |                  ^
   |No given instance of type deriving.Mirror.Of[E] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[E]: 
   |	* class E is not a generic product because it is not a case class
   |	* class E is not a generic sum because it is not an abstract class
-- Error: tests/neg/mirror-synthesis-errors.scala:26:18 ----------------------------------------------------------------
26 |val testF = summon[Mirror.Of[F]] // error: No children
   |                  ^
   |No given instance of type deriving.Mirror.Of[F] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[F]: 
   |	* trait F is not a generic product because it is not a case class
   |	* trait F is not a generic sum because it does not have subclasses
-- Error: tests/neg/mirror-synthesis-errors.scala:27:18 ----------------------------------------------------------------
27 |val testG = summon[Mirror.Of[Foo.G]] // error: Has anonymous subclasses
   |                  ^
   |No given instance of type deriving.Mirror.Of[Foo.G] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[Foo.G]: 
   |	* trait G is not a generic product because it is not a case class
   |	* trait G is not a generic sum because it has anonymous or inaccessible subclasses
